@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-09-25T16:22:07Z",
-  "count" : 2,
+  "timestamp" : "2022-10-09T08:22:20Z",
+  "count" : 1,
   "count_minmax" : [ 1, 2 ],
-  "count_decinc" : [ -0, +2 ],
+  "count_decinc" : [ -1, +2 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
