@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-10-09T01:44:54Z",
+  "timestamp" : "2022-10-09T08:22:20Z",
   "count_outdated" : 570,
   "uniques_outdated" : 328,
-  "count" : 591,
-  "uniques" : 338,
+  "count" : 592,
+  "uniques" : 340,
   "clones" : [
     {
       "timestamp": "2022-09-25T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -60,6 +60,13 @@
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-10-09T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ]
     }
   ]
 }
