@@ -1,10 +1,10 @@
 {
-  "count": 21,
-  "uniques": 4,
+  "count": 22,
+  "uniques": 5,
   "clones": [
     {
       "timestamp": "2022-09-25T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -41,6 +41,11 @@
       "timestamp": "2022-10-03T00:00:00Z",
       "count": 1,
       "uniques": 1
+    },
+    {
+      "timestamp": "2022-10-09T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
