@@ -1,3 +1,11 @@
+2022-10-09T08:22:20Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3213459001
+* notice: last 14d: unq all: 5 22
+* notice: prev accum: outdated-unq outdated-all / unq all: 328 570 / 338 591
+* notice: next accum: outdated-unq outdated-all / unq all: 328 570 / 340 592
+* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -1 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [] / [2022-09-25 2022-10-09]
+
 2022-10-09T01:44:54Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3212495489
 * notice: last 14d: unq all: 4 21
